2009-11-19  Mike Gorse  <mgorse@novell.com>

	* at-spi-sharp/ActionTest.cs, at-spi-sharp/DocumentTest.cs,
	at-spi-sharp/EventTest.cs, at-spi-sharp/ImageTest.cs,
	at-spi-sharp/UncachedChildrenTest.cs, at-spi-sharp/TextTest.cs,
	at-spi-sharp/SelectionTest.cs, at-spi-sharp/TableTest.cs,
	at-spi-sharp/HypertextTest.cs,, at-spi-sharp/AccessibleTest.cs,
	at-spi-sharp/BaseTest.cs, at-spi-sharp/ComponentTest.cs:
	Remove NDesk namespace.

	* at-spi-sharp/EventTest.cs: ignore BoundsChanged test for now.

	* at-spi-sharp/AccessibleTest.cs: Test that parent of an application
	is the desktop.

	* at-spi-sharp/Base.cs: Sleep instead of calling Bus.Iterate.

2009-11-12  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* at-spi-sharp/Makefile.am:
	* at-spi-sharp/atspitest.sh.in: Rename assembly to AtSpiSharpTests.dll.
	Reference ndesk-dbus available internally in at-spi-sharp.dll.

2009-11-12  Mike Gorse  <mgorse@novell.com>

	* at-spi-sharp/Base.cs: Fix Find to start from the given accessible.

	* at-spi-sharp/atspitest.sh.in: Remove setting of GTK_MODULES.

	* apps/gtkradiobutton.py: Added.
2009-10-29  Mike Gorse  <mgorse@novell.com>

	* apps/Document.cs, at-spi-sharp/Event.cs, Test ChildAdded, ChildRemoved,
	NameChanged, RoleChanged, StateChanged, and DescriptionChanged.

	* Base.cs: Avoid throwing an exception if an application has
	0 children (although this should not happen).

2009-10-14  Mike Gorse  <mgorse@novell.com>

	* apps/Document.cs, at-spi-sharp/EventTest.cs: at-spi-sharp/Makefile.am:
	Add event test.

	* apps/gtktextview.py: Set text when button clicked.

	* at-spi-sharp/UncachedChildrenTest.cs: at-spi-sharp/Makefile.am:
	Added UncachedChildren test.

	* at-spi-sharp/TableTest.cs: Upper-case test function name.

	* at-spi-sharp/Base.cs: Fix exception in TearDown when process already
	exited.

	* at-spi-sharp/atspitest.sh.in: Add -labels to flags.

	* at-spi-sharp/atspitest.sh.in, at-spi-sharp/Makefile.am:
	Remove Debug/Release distinction.
